--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,33 +67,22 @@ input[type="number"] {
   transition: background 0.2s ease-in-out;
 }
 
-.address-table th, td{
+.address-table th,
+td {
   text-align: left;
   padding-left: 50px;
   padding-top: 5px;
 }
 
-.error-msg{
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+.error-msg {
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
   perspective: 1000px;
 }
 
-@keyframes shake {
-  5%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
-  
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
-
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
-
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+.featured-lists li::before {
+  color: #4338ca;
+  content: "◈";
+  margin-right: 5px;
 }
