Update product list page for product items

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type="number"] {
+.product input[type="number"] {
   -moz-appearance: textfield;
 }
 
