Added PDF Invoice view

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,3 +91,9 @@ td {
   content: "◈";
   margin-right: 5px;
 }
+
+.react-pdf__Page__canvas {
+  margin: 0 auto;
+  width: 80% !important;
+  height: 100% !important;
+}
