--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,9 +42,8 @@ input::-webkit-inner-spin-button {
   @apply border-b-2 border-site-primary focus:outline-none text-indigo-600 font-medium;
 }
 
-
-.attribute-filter{
-  @apply border-2 border-gray-300 rounded-full w-6 h-6 focus:scale-125 transition-transform duration-150 mx-1 shadow-md
+.attribute-filter {
+  @apply border-2 border-gray-300 rounded-full w-6 h-6 focus:scale-125 transition-transform duration-150 mx-1 shadow-md;
 }
 .m-btn + .m-btn {
   margin-left: 10px;
@@ -101,4 +100,44 @@ td {
   margin: 0 auto;
   width: 80% !important;
   height: 100% !important;
+}
+
+.checkboxColor {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  font-size: 25px;
+}
+
+.checkboxColor input {
+  visibility: hidden;
+  cursor: pointer;
+}
+
+.mark {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.checkboxColor input:checked ~ .mark {
+  @apply scale-125 border-2 border-gray-200
+}
+
+.mark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.checkboxColor .mark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  transform: rotate(45deg);
 }
